Fixed mouse issues, screen overflow, and resizing problems

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,8 +1,9 @@
 /* Body and Misc */
 
 * {
-    max-width: 100vw;
+    max-width: 100%;
     font-family: Verdana, sans-serif;
+    margin-left: 0;
 }
 
 a {
@@ -10,22 +11,15 @@ a {
 }
 
 a:hover {
-    cursor: none;
+    /* cursor: url("../images/mouse_pointer.png"), auto; */
+    cursor: inherit;
+    color: orange;
 }
 
 body {
     background-color: black;
-    cursor: none;
+    cursor: url("../images/mouse_basic.png"), auto;
     width: 100vw;
-}
-
-#mouse_basic {
-    height: 18px;
-    width: 14px;
-    position: relative;
-    z-index: 1;
-    margin: 0;
-    padding: 0;
 }
 
 
@@ -39,7 +33,7 @@ body {
     position: relative;
 } 
 
-.header-link {
+.header_link {
     padding-left: 3%;
     padding-right: 3%;
     text-decoration: none;
@@ -47,10 +41,9 @@ body {
     color: white;
     font-weight: bold;
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-    /* z-index: 0; */
 }
 
-.header-link:hover {
+.header_link:hover {
     color: orange;
 }
 
@@ -58,14 +51,10 @@ hr {
     width: 40vw;
     border: 1px solid orange;
     margin-top: 5vh;
+    margin-left: 30vw;
 }
 
-#introduction {
-    color: white;
-    max-width: 100vw;
-}
-
-#text-intro {
+#text_intro {
     font-size: 20vh;
     vertical-align: middle;
     animation-delay: 0.25s;
@@ -79,9 +68,10 @@ hr {
     background-repeat: no-repeat;
     background-position: center;
     background-size: 30%;
+    color: white;
 }
 
-#text-intro p {
+#text_intro p {
     filter: drop-shadow(2px 5px black);
 }
 
@@ -92,34 +82,38 @@ hr {
     }
 }
 
+#about_me {
+    color: white;
+    display: flex;
+    flex-direction: row;
+    font-size: 2vh;
+    margin-top: 5vh;
+    margin-left: 1vw;
+}
+
+#personal_pic {
+    border: 2px solid orange;
+    border-radius: 50%;
+    background: url("../images/foxbot.png") center center no-repeat;
+    background-size: cover;
+    /* width: 30vw; */
+    /* min-height: 30vh; */
+    min-width: 30vw;
+    margin-left: 1vw;
+    margin-right: 1vw;
+}
+
 
 /* Projects */
 
-#projects-overlay {
+#projects_overlay {
     display: flex;
     flex-direction: column;
-    /* flex: 1 1 100%; */
     justify-content: left;
     padding: 0px;
     margin: 0px;
     width: 100vw;
 }
-
-/* .arrow {
-    font-size: 4vw;
-    font-weight: lighter;
-    color: orange;
-    border: 2px solid orange;
-    border-radius: 50%;
-    background-color: black;
-    width: 5vw;
-    text-align: center;
-}
-
-.arrow:hover {
-    background-color: orange;
-    color: black;
-} */
 
 .links {
     display: flex;
@@ -137,11 +131,10 @@ hr {
     filter: invert();
 }
 
-.project-name {
+.project_name {
     color: orange;
     filter: drop-shadow(2px 3px black);
     font-size: 4vh;
-    /* font-weight: bolder; */
     max-width: 50vw;
 }
 
@@ -155,6 +148,7 @@ hr {
     flex-direction: column;
     justify-content: top;
     text-align: center;
+    z-index: 1;
 }
 
 .project:hover {
@@ -167,7 +161,8 @@ hr {
     /* font-weight: bold; */
     color: white;
     max-width: 50vw;
-    margin-top: 5vh;
+    /* margin-top: 5vh; */
+    margin: 5vh 1vw 0vh 1vw;
 }
 
 .project:hover p {
@@ -179,43 +174,31 @@ hr {
 
 @keyframes appear {
     25% {
-        opacity: 80;
+        opacity: 0.8;
     }
     100% {
-        opacity: 100;
+        opacity: 1.0;
     }
 }
 
-/* .project h1 {
-    filter: saturate(1.1);
-} */
-
-#project-1 {
+#project_1 {
     background-image: linear-gradient(rgba(0, 0, 0, 0.4),rgba(0, 0, 0, 0.4)), url("../images/valorant.jpeg");
 }
 
-#project-2 {
+#project_2 {
     background: linear-gradient(rgba(0, 0, 0, 0.4),rgba(0, 0, 0, 0.4)), url("../images/foxbot.png") center center;
     background-size: cover;
 }
 
-#project-3 {
+#project_3 {
     background-image: linear-gradient(rgba(0, 0, 0, 0.4),rgba(0, 0, 0, 0.4)), url("../images/test.jpg");
 }
 
-#project-4 {
+#project_4 {
     background-image: linear-gradient(rgba(0, 0, 0, 0.4),rgba(0, 0, 0, 0.4)), url("../images/test2.jpg");
 }
 
-/* #project-5 {
-    background-image: url("../images/test2.jpg");
-}
-
-#project-6 {
-    background-image: url("../images/test2.jpg");
-} */
-
-.project-row {
+.project_row {
     display: flex;
     flex-direction: row;
 }
@@ -231,3 +214,35 @@ footer {
     justify-content: center;
     padding: 2vh 0vw;
 }
+
+
+
+
+
+
+/* No longer used / for possible future use */
+
+/* #mouse_basic {
+    height: 18px;
+    width: 14px;
+    position: relative;
+    z-index: 2;
+    margin: 0;
+    padding: 0;
+} */
+
+/* .arrow {
+    font-size: 4vw;
+    font-weight: lighter;
+    color: orange;
+    border: 2px solid orange;
+    border-radius: 50%;
+    background-color: black;
+    width: 5vw;
+    text-align: center;
+}
+
+.arrow:hover {
+    background-color: orange;
+    color: black;
+} */
